monitor/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  namespace: uptimekuma
spec:
  selector:
    app: uptimekuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
