monitor/uptimekuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-uptimekuma
  namespace: uptimekuma
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-uptimekuma
  namespace: uptimekuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptimekuma.ltc.tsphotoclicks.net`)
      kind: Rule
      services:
        - name: uptimekuma
          port: 80
      middlewares:
        - name: redirect-uptimekuma
          namespace: uptimekuma
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-uptimekuma
  namespace: uptimekuma
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`uptimekuma.ltc.tsphotoclicks.net`)
      services:
        - name: uptimekuma
          port: 3001
  tls:
    secretName: uptimekuma-cert
